# DeepSHARQ

./: CITATION.cff  README.md
pytorch/: README.md  deephec_superconvergence.ipynb  deepsharq_plateau_delta.ipynb  deepsharq_superconvergence.ipynb  deepsharq_superconvergence_delta.ipynb  pytorch_helper.py  tf_helper.py  weight_transfer_onnx.ipynb
pytorch/datasets/: dataset.csv  k_range_0.1_dataset.csv  k_range_0.3_dataset.csv
search/: Cargo.toml  README.md
search/models/: deephec_model.tflite  deepsharq_model.tflite
search/src/: algorithm.rs  config.rs  csv_handler.rs  lib.rs  math.rs  model.rs
search/src/algorithm/: deephec_search.rs  deepsharq_search.rs  fast_search.rs  k_range_search.rs  sharq_search.rs
search/src/model/: data_rate.rs  delay.rs  loss.rs  redundancy.rs
